--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,17 +24,21 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.0.1
-  get_it: ^7.1.1
+  get_it: ^7.1.4
   freezed_annotation: ^0.14.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  retrofit: ^2.0.0
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.0
   freezed: ^0.14.0
+  retrofit_generator: ^2.0.0
+  json_serializable: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
